--- a/recipes/curry.html
+++ b/recipes/curry.html
@@ -7,5 +7,25 @@
 
 <body>
     <h1>My go-to Curry concotion</h1>
+    <img src="https://www.ichibanya.co.jp/assets/images/menu/curry/meats-007.png"
+    alt="a delicious looking porkcutlet over rice and curry" width="500">
+    <p>One of my <strong>favorite</strong> meals in Japan is curry over rice. It doesn't have to have katsu on top, and 
+        it can be a healthy meal depending on its content. Ignore the picture; its just my favorite place to eat curry if im not cooking.
+    </p>
+    <p>In this recipe, we will make sure that the curry contains a healthy amount of vegetables and meats.
+        Doing so, you can create a delcious,well balanced meal that you will love eating every night.
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Brocolli</li>
+        <li>Potato</li>
+        <li>Carrot</li>
+        <li>Chicken meat: Boneless leg</li>
+        <li>Half stick of Butter</li>
+        <li>Curry sauce mix</li>
+        <li>a Nice pot</li>
+        <li>Wooden stir stick</li>
+    </ul>
+    
 </body>
 </html>
