Include steps for curry recipe
Added the Steps section for the recipe and
made changes with needed ingredients list.

--- a/recipes/curry.html
+++ b/recipes/curry.html
@@ -20,12 +20,33 @@
         <li>Brocolli</li>
         <li>Potato</li>
         <li>Carrot</li>
+        <li>Onions</li>
         <li>Chicken meat: Boneless leg</li>
         <li>Half stick of Butter</li>
         <li>Curry sauce mix</li>
+        <li>a Big bowl</li>
         <li>a Nice pot</li>
         <li>Wooden stir stick</li>
     </ul>
-    
+    <h2>Steps to create this <em>Beauty</em></h2>
+    <ol>
+        <li>Peel potatos</li>
+        <li>Peel carrots</li>
+        <li>Peel Onions</li>
+        <li>Wash all veggies with veggie wash: including the brocolli. (use Vinegar if there is no veggie wash)</li>
+        <li>Cut potatos (vertically half and vertically half again..,then cut horizontally)</li>
+        <li>Cut carrots</li>
+        <li>Cut onions (in half,then vertically half, then at an angle)</li>
+        <li>Cut chicken into any sizes you want</li>
+        <li>Put all into a big bowl</li>
+        <li>Put half stick of butter into cooking pot..wait a bit then stir it around</li>
+        <li>Put the rest of the ingredients inside</li>
+        <li>Stir at intervals</li>
+        <li>Once they all look decently cooked,put water into the pot</li>
+        <li>After boiling, put curry sauce mix</li>
+        <li>Stir more</li>
+        <li>Then lower heat and let it simmer for a while until veggies are soft</li>
+        <li><strong><em>VIOLA</em></strong>!!! Enjoy your curry with rice or whatever </li>
+    </ol>
 </body>
 </html>
