Create link on homepage to kimchi recipe
Created a link on the homepage to the kimchi bokumbap
recipe.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/curry.html">My Curry</a>
+    <p><a href="./recipes/curry.html">My Curry</a></p>
+    <p><a href="./recipes/kimchi-bokumbap.html">Mother's Kimchi Bokumbap</a></p>
 </body>
 </html>
