Add photo and description of kimchi fried Rice
The kimchi fried rice page got a nice picture from google and
got a nice description to go along with the proceeding recipe.

--- a/recipes/kimchi-bokumbap.html
+++ b/recipes/kimchi-bokumbap.html
@@ -7,5 +7,13 @@
 
 <body>
     <h1>Mother's Kimchi Fried Rice Recipe</h1>
+    <img src="https://www.simplyrecipes.com/thmb/jYm7ax6fInIcvskRiWF1yLESBeI=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/Simply-Recipes-Kimchi-Fried-Rice-LEAD-4-1b73ba2f1c6b4d9fb9d25430ab73c32f.jpg"
+    alt="a picture that displays kimchi fried rice" width="500">
+    <p>Kimchi Bokumbap(kimchi fried rice) is one of my favorite meals of all time. The tasty rice filled with different vegetables and meats
+        all come together with a nice egg on top. The name is also really fun to say outloud.
+    </p>
+    <p>With my recipe, I will tell you how my mother used to make this delicious meal. Whenever she made this meal, I would start drooling from
+        just the scent, and I hope you will too.
+    </p>
 </body>
 </html>
