Complete Kimchi Bokumbap page
Added the ingredients and the steps to make kimchi bokumbap

--- a/recipes/kimchi-bokumbap.html
+++ b/recipes/kimchi-bokumbap.html
@@ -15,5 +15,33 @@
     <p>With my recipe, I will tell you how my mother used to make this delicious meal. Whenever she made this meal, I would start drooling from
         just the scent, and I hope you will too.
     </p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Yummy Kimchi</li>
+        <li>Eggs</li>
+        <li>Butter</li>
+        <li>Olive Oil</li>
+        <li>Garlice powder</li>
+        <li>Soy Sauce</li>
+        <li>Meats (optional)</li>
+        <li>Pan and stove</li>
+        <li>Bowl</li>
+    </ul>
+    <h2>Steps to create my childhood dish</h2>
+    <ol>
+        <li>Prep frying pan with olive oil by moving it around</li>
+        <li>Put eggs on and then cover until well done. Put them aside</li>
+        <li>Put kimchi into a bowl</li>
+        <li>Cut kimchi wtih scissors in the bowl until they are very small</li>
+        <li>Prepare another pan and butter</li>
+        <li>Put in a half stick or more of butter into the pan proceeded by the kimchi</li>
+        <li>Stir for a long time</li>
+        <li>Put in garlic powder</li>
+        <li>Stir Longer</li>
+        <li>Put in rice and soy sauce</li>
+        <li>Stir for an even <em>longer</em> time</li>
+        <li>Afterwards, get a plate and dump ur rice on it</li>
+        <li>Cover your meal with the eggs and <strong><em>VIOLA</em></strong>! Enjoy the meal</li>
+    </ol>
 </body>
 </html>
