Create new recipe and link to recipe at index.html
Added a 3rd link to my homepage(index.html) and made the base for the 3rd recipe.

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <h1>Odin Recipes</h1>
     <p><a href="./recipes/curry.html">My Curry</a></p>
     <p><a href="./recipes/kimchi-bokumbap.html">Mother's Kimchi Bokumbap</a></p>
+    <p><a href="./recipes/potatosides.html">My Favorite Potato Side Dish</a></p>
 </body>
 </html>
