Add an img and description to 3rd recipe
My 3rd recipe gained an associated picture and a description preceding the Ingredients and steps.

--- a/recipes/potatosides.html
+++ b/recipes/potatosides.html
@@ -7,6 +7,15 @@
 
 <body>
     <h1>My Favorite Potato Side Dish</h1>
+    <img src="https://www.allrecipes.com/thmb/iYtDXQzPHzbKuGcmvGwkF8BLV1Q=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/27252-best-potatoes-youll-ever-taste-DDMFS-4x3-1596-f7d151977d8a40a985f18d35fa9f6588.jpg"
+    alt="A delicious looking plate of cooked potatos with seasoning" width="500">
+    <p>This is a recipe for my favroite side dish that my mother used to make. It is
+        very simple but delicious, and can compliment any other meal, especially meats.
+    </p>
+    <p>I hope that you will be able to realize that cooking has the ability to make simple 
+        veggies into a powerhouse of flavor and satisfaction.
+    </p>
+    
 </body>
 
 
