Finish potato side recipe with ingredients and Steps
Finished up the recipe page for my potato side dish.
Added the ingredients and steps sections.

--- a/recipes/potatosides.html
+++ b/recipes/potatosides.html
@@ -15,7 +15,29 @@
     <p>I hope that you will be able to realize that cooking has the ability to make simple 
         veggies into a powerhouse of flavor and satisfaction.
     </p>
-    
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Butter</li>
+        <li>Baby Potatos</li>
+        <li>Olive oil</li>
+        <li>Parsley</li>
+        <li>Onions</li>
+        <li>Salt/Pepper</li>
+        <li>Frying pan</li>
+    </ul>
+    <h2>Steps for the <strong>godly</strong> sidedish</h2>
+    <ol>
+        <li>Wash potatos</li>
+        <li>Cut them into thin pieces</li>
+        <li>Warm frying pan then add olive oil</li>
+        <li>Wait for pan to become hot</li>
+        <li>Place potatos on pan onto they become yellow</li>
+        <li>Sprinkle salt and pepper on top</li>
+        <li>Add butter (one spoon scoop)</li>
+        <li>After the butter melts, add parsley and onion</li>
+        <li>Move around the pan</li>
+        <li><strong><em>DONE</em></strong></li>
+    </ol>
 </body>
 
 
