Add header tag to h1 and edit path for the link to css
Added a header tag to h1 and also edited the link to the css file because the changes were not showing up.
Changed the font and added an aquamarine background color.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>My Favorite Recipes</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="header">Odin Recipes</h1>
     <p><a href="./recipes/curry.html">My Curry</a></p>
     <p><a href="./recipes/kimchi-bokumbap.html">Mother's Kimchi Bokumbap</a></p>
     <p><a href="./recipes/potatosides.html">My Favorite Potato Side Dish</a></p>
