Add classes to recipe links and change font to Courier New, monospace
All three links to my recipes were given the recipe class; and made their font into courier new, monospace in css.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1 class="header">Odin Recipes</h1>
-    <p><a href="./recipes/curry.html">My Curry</a></p>
-    <p><a href="./recipes/kimchi-bokumbap.html">Mother's Kimchi Bokumbap</a></p>
-    <p><a href="./recipes/potatosides.html">My Favorite Potato Side Dish</a></p>
+    <p class="recipe"><a href="./recipes/curry.html">My Curry</a></p>
+    <p class="recipe"><a href="./recipes/kimchi-bokumbap.html">Mother's Kimchi Bokumbap</a></p>
+    <p class="recipe"><a href="./recipes/potatosides.html">My Favorite Potato Side Dish</a></p>
 </body>
 </html>
