--- a/recipes/curry.html
+++ b/recipes/curry.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>My Favorite Curry Recipe</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
