Give ingredients and steps their own classes and Change their font
Ingredients and Steps for the recipes were given the class ingredients and steps.
Also their fonts were changed to monaco, monospace.

--- a/recipes/curry.html
+++ b/recipes/curry.html
@@ -16,7 +16,7 @@
     <p>In this recipe, we will make sure that the curry contains a healthy amount of vegetables and meats.
         Doing so, you can create a delcious,well balanced meal that you will love eating every night.
     </p>
-    <h2>Ingredients</h2>
+    <h2 class="ingredients">Ingredients</h2>
     <ul>
         <li>Brocolli</li>
         <li>Potato</li>
@@ -29,7 +29,7 @@
         <li>a Nice pot</li>
         <li>Wooden stir stick</li>
     </ul>
-    <h2>Steps to create this <em>Beauty</em></h2>
+    <h2 class="steps">Steps to create this <em>Beauty</em></h2>
     <ol>
         <li>Peel potatos</li>
         <li>Peel carrots</li>
